public/styles/layout.css
/*
 * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
 * https://css-tricks.com/international-box-sizing-awareness-day/
 * Do not modify these two selectors, please
 */
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

/*
 * Global layout stuff
 */

body {
  margin: 0;
  color: #244751;
  background-color: #eee;
  font-family: 'Roboto Condensed', sans-serif;
}

/*
 * Additional CSS can be defined below or in other CSS files, as per instructions
 */
 main {
   width: 450px;
   background-color: white;
   position: relative;
   padding-top: 140px;
   padding-bottom: 140px;

 }

 .tweet-box {
  border: 2px solid darkgrey;
  border-radius: 10px;
  margin: 2em;
  padding: 6px;
  position: relative;
  color: #1c1c1c;
  opacity: 0.8;
 }
 .user-image {
  height: 70px;
  width: 70px;
 }

 .tweet-header {
  background-color: lightgrey;
  margin: -6px;
  padding: 6px;
  height: 85px;
  border-radius: 7px 7px 0px 0px;
 }

.username {
  position: absolute;
  left: 85px;
  top: -6px;
 }

.user-image {
  position: absolute;
}

.handle {
  position: absolute;
  right: 0px;
  margin: 8px;
  font-weight: lighter;
}
.center-me {
  margin: 0 auto;
}

.time-ago {
  border-top: 2px solid darkgrey;
  margin: -6px;
  padding: 12px;
}

.tweet-text {
  padding: 6px;
  padding-bottom: 20px;
  padding-top: 20px;
  overflow-wrap: break-word;
}

.tweet-box:hover {
  border: 2px solid black;
  color: black;
  opacity: 1;
 }

.icon {
  position: absolute;
  bottom: 13px;
  right: 12px;
}
.icon i{
  float: left;
  color: #42b3f4;
  opacity: 0;
  margin: 0 2px;
 }

.tweet-box:hover .icon i{
  opacity: 1;
 }

.error {
  color: red;
  font-weight: 700;
  position: absolute;
  left: 2em;
  top: 120px;
  background-color: #e0acac;
  width: 385px;
  padding: 10px;
  border: solid 2px red;
  border-radius: 10px;
}

